# porta-microservices

./: .gitmodules  CMakeLists.txt  build-containers.sh  build-rpc-proxy.sh  build.sh
certs/: etsys.intra.crt  etsys.intra.key
cmake/: FindGRPC.cmake
docker/porta-os/: Dockerfile  build-images.sh
etc/: uncrustify.cfg
googleapi/: CMakeLists.txt
openshift/: service-customer.yaml  service-rpc-proxy.yaml  servie-account.yaml
proto/: Account.proto  Customer.proto
src/account/: CMakeLists.txt  Dockerfile  service_account.cxx
src/customer/: CMakeLists.txt  Dockerfile  service_customer.cxx
src/rpc-proxy/: Dockerfile  rpc-proxy.go
src/utils/: utils.hxx
utils/coreos/: 01_create_CA.sh  02_deploy_coreos_libvirt_master.sh  03_deploy_coreos_libvirt_worker.sh  04_configure_kubectl.sh  controller-install.sh  user_data_master  user_data_worker  worker-install.sh
utils/coreos/PS-k8S-All-in-one/: 01_PS-K8S-all-in-one.sh  PS-K8S-RADIUS.sh  radius-stats.diff  radius-stats.diff.base64
utils/coreos/PS-k8S-All-in-one/manifests/grafana/: grafana-configMap.yaml  grafana-dashboard-definitions-porta.yaml  grafana-deployment.yaml  grafana-service.yaml
utils/coreos/PS-k8S-All-in-one/manifests/porta-node-exporter-radius/: porta-node-exporter-daemonset.yaml  porta-node-exporter-service-monitor.yaml  porta-node-exporter-service.yaml
utils/coreos/PS-k8S-All-in-one/manifests/prometheus/: prometheus-prometheus.yaml  prometheus-service.yaml
utils/coreos/network-weave-ignition/: .gitignore  01_create_CA.sh  02_create_master_ignition_conf.sh  03_configure_kubectl.sh  04_2_install_cloud_controller_manager.sh  04_create_default_storage_class.sh  04_mark_master_node.sh  05_install_proxy.sh  06_install_network_addon.sh  07_install_dns.sh  08_install_ingress_controller.sh  09_create_bootstrap.sh  10_install_dashboard.sh  10_install_monitoring.sh  11_install_logging.sh  12_install_tracing.sh  15_install_helm.sh  2_01_create_CA.sh  2_02_create_worker_ignition_conf.sh  master-env.conf.in  openstack-helpers  worker-env.conf.in
utils/coreos/network-weave-ignition/grafana-dashboards/: ingress-controller-nginx.json
utils/coreos/ssh/: atomic  atomic.pub
utils/local_deploy/: 00_dummy_network.sh  01_install_k8s.sh  helpers
utils/local_deploy/02_service_mesh/: istio-demo.yaml
utils/local_deploy/03_ingress_controller/: configmap.yaml  deployment-with-rbac.yaml  istio_rules.yaml
utils/local_deploy/04_storage/: deployment-client.yaml  deployment-data.yaml  deployment-master.yaml  service-client.yaml  service-data.yaml  service-master.yaml
utils/local_deploy/05_tracing/: agent.yaml  collector.yaml  configmap.yaml  ingress.yaml  query.yaml  secret.yaml
utils/local_deploy/06_monitoring/: grafana-deployment.yaml  grafana-ingress.yaml  grafana-secret.yaml  prometheus-ingress.yaml  prometheus-prometheus.yaml  prometheus-secret.yaml
utils/local_deploy/07_logging/: fluentbit-configmap.yaml  fluentbit-deployment.yaml  kibana-configmap.yaml  kibana-deployment.yaml  kibana-ingress.yaml  kibana-secret.yaml  kibana-service.yaml
utils/local_deploy/08_install_pb_services/: istio_rules.yaml
utils/local_deploy/08_install_pb_services/ba-payment-processor-dispatcher/: deployment.yaml  service.yaml
utils/local_deploy/08_install_pb_services/rpc-proxy/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
